# maoe

./: .env.example  .gitignore  AGENTS.md  COMMANDS-QUICK-REF.md  MAOE.md  RULES.md  SOUL.md  WORKING-CONTEXT.md  pyproject.toml
.maoe/: manifest.yaml  skill-registry.json
agents/: architect.md  code-agent.md  debug-agent.md  loop-operator.md  planner.md  research-agent.md  review-agent.md  test-agent.md
benchmarks/: __init__.py  metrics.py  report.py  runner.py  suite.py
commands/: build.md  plan.md  report.md  resume.md  route.md  run.md
docs/: MAOE-ECC融合开发文档.md  MAOE-vs-妙喵私教-数据对比报告.md  MAOE-源码逐文件讲解.md
docs/slides/: MAOE-roadshow.pptx
hooks/: hooks.yaml
skills/code-review/: SKILL.md  capsule.yaml
skills/cost-aware-routing/: SKILL.md  capsule.yaml
skills/docs-update/: SKILL.md  capsule.yaml
skills/pytest-generator/: SKILL.md  capsule.yaml
skills/pytest-runner/: SKILL.md  capsule.yaml
skills/python-analysis/: SKILL.md  capsule.yaml
skills/python-implementation/: SKILL.md  capsule.yaml
skills/python-tdd/: SKILL.md  capsule.yaml
skills/quality-verification/: SKILL.md  capsule.yaml
skills/recovery-loop/: SKILL.md  capsule.yaml
skills/security-scan/: SKILL.md  capsule.yaml
skills/task-decomposition/: SKILL.md  capsule.yaml
src/maoe/: main.py
src/maoe/bootstrap/: __init__.py  (+1 more)
tests/: conftest.py  test_bootstrap.py  test_compiler.py  test_economist.py  test_experiments.py  test_models.py  test_orchestrator.py  test_quality.py  test_registry.py  test_router.py  test_runtime.py
tools/: make_poster.py  make_pptx.py  maoe-poster.tsx
(+39 files in other folders)
