[project]
name = "maoe"
version = "0.1.0"
description = "Multi-Agent Dynamic Orchestration Engine"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx[socks]>=0.28",
    "httpx-sse>=0.4",
    "loguru>=0.7",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
maoe = "maoe.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maoe"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "benchmarks/results"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"benchmarks/suite.py" = ["E501"]
"benchmarks/report.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
